--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1199px) {
+    .work-section {
+        display: none;
+    }
+}
+
+.work-section {
+    padding-top: 0;
+}
+
 .work {
     display: flex;
     margin-left: -30px;
