--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,13 +1,28 @@
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+    .section {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }    
 }
 
 .section__title {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     color: var(--title-text-color);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+    .section__title {
+        font-size: 36px;
+        line-height: 1.18;
+        margin-bottom: 50px;
+    }
 }
