--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,12 +1,45 @@
 .features {
     font-size: 14px;
     line-height: 1.71;
-    display: flex;
-    margin-left: -30px;
 }
 
-.features__item {
-    margin-left: 30px;
+@media screen and (max-width: 1199px) {
+    .features__item:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .features {
+        display: flex;
+        flex-wrap: wrap;
+    }     
+
+    .features__item {
+        max-width: 354px;
+
+        &:nth-child(even) {
+            margin-left: 30px;
+        }
+
+        &:nth-last-child(-n+2) {
+            margin-bottom: -30px;
+        }
+    }
+}
+ 
+@media screen and (min-width: 1200px) {
+    .features {
+        display: flex;
+    }     
+
+    .features__item {
+        margin-bottom: 0px;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
 }
 
 .features__color {
@@ -24,9 +57,16 @@
 }
 
 .features__title {
+    margin-bottom: 10px;
+
     font-weight: 700;
     line-height: 1.14;
     color: var(--title-text-color);
     text-transform: uppercase;
-    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+    .features__title {
+    text-align: center;
+    }
 }
