--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -1,23 +1,63 @@
+
 .team {
     background-color: #F5F4FA;
 }
 
-.team-list {
+/*.team-list {
     display: flex;
     margin-left: -30px;
-}
+}*/
 
 .team-list__item {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
     color: var(--title-text-color);
-    margin-left: 30px;
+    /*margin-left: 30px;*/
     text-align: center;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 1199px) {
+    .team-list__item:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+    }     
+
+    .team-list__item {
+        min-width: 354px;
+
+        &:nth-child(even) {
+            margin-left: 30px;
+        }
+
+        &:nth-last-child(-n+2) {
+            margin-bottom: -30px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .team-list {
+        display: flex;
+    }     
+
+    .team-list__item {
+        margin-bottom: 0px;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
 }
 
 .team-list__card {
