сделала стили для Клиентов

--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,14 +1,26 @@
-.clients {
-    display: flex;
-}
+@media screen and (max-width: 767px) {
+    .clients {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
-.clients__item:not(:last-child) {
-    margin-right: 30px;
+    .clients__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
+
+        &:nth-child(2n) {
+            margin-right: 0;
+        }
+
+        &:nth-last-child(-n+2) {
+            margin-bottom: 0;
+        }
+    }
 }
 
 .clients__link {
     display: flex;
-    padding: 16px 32px 16px 32px;
+    padding: 16px 51px 16px 51px;
     
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -25,6 +37,45 @@
     }
 }
 
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+    .clients {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .clients__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
+
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
+
+        &:nth-last-child(-n+3) {
+            margin-bottom: 0;
+        }
+    }
+
+    .clients__link {
+        padding: 16px 59px 16px 59px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .clients {
+        display: flex;
+    }
+
+    .clients__item:not(:last-child) {
+        margin-right: 30px;
+    }
+
+    .clients__link {
+        padding: 16px 31px 16px 31px;
+    }
+
+}
+
 .clients__icon {
     width: 106px;
     height: 60px;
@@ -36,5 +87,5 @@
     .clients__link:hover &,
     .clients__link:focus & {
         color: var(--accent-color);
-}
+    }
 }
