--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -3,9 +3,13 @@
     line-height: 1.71;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
     .features__item:not(:last-child) {
         margin-bottom: 30px;
+    }
+
+    .features__title {
+        text-align: center;
     }
 }
 
@@ -13,32 +17,30 @@
     .features {
         display: flex;
         flex-wrap: wrap;
-    }     
+    }
 
     .features__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
         max-width: 354px;
 
-        &:nth-child(even) {
-            margin-left: 30px;
+        &:nth-child(2n) {
+            margin-right: 0;
         }
 
         &:nth-last-child(-n+2) {
-            margin-bottom: -30px;
+            margin-bottom: 0;
         }
     }
 }
- 
+
 @media screen and (min-width: 1200px) {
     .features {
         display: flex;
-    }     
+    }
 
-    .features__item {
-        margin-bottom: 0px;
-
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
+    .features__item:not(:last-child) {
+        margin-right: 30px;
     }
 }
 
@@ -63,10 +65,4 @@
     line-height: 1.14;
     color: var(--title-text-color);
     text-transform: uppercase;
-}
-
-@media screen and (max-width: 767px) {
-    .features__title {
-    text-align: center;
-    }
 }
