--- a/css/main.css
+++ b/css/main.css
@@ -531,9 +531,12 @@ body {
   line-height: 1.71;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
   .features__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+  .features__title {
+    text-align: center;
   }
 }
 
@@ -543,22 +546,21 @@ body {
     flex-wrap: wrap;
   }
   .features__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
     max-width: 354px;
   }
-  .features__item:nth-child(even) {
-    margin-left: 30px;
+  .features__item:nth-child(2n) {
+    margin-right: 0;
   }
   .features__item:nth-last-child(-n+2) {
-    margin-bottom: -30px;
+    margin-bottom: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features {
     display: flex;
-  }
-  .features__item {
-    margin-bottom: 0px;
   }
   .features__item:not(:last-child) {
     margin-right: 30px;
@@ -585,12 +587,6 @@ body {
   line-height: 1.14;
   color: var(--title-text-color);
   text-transform: uppercase;
-}
-
-@media screen and (max-width: 767px) {
-  .features__title {
-    text-align: center;
-  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -627,10 +623,6 @@ body {
   background-color: #F5F4FA;
 }
 
-/*.team-list {
-    display: flex;
-    margin-left: -30px;
-}*/
 .team-list__item {
   font-weight: 500;
   font-size: 16px;
@@ -643,7 +635,7 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
   .team-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -655,22 +647,21 @@ body {
     flex-wrap: wrap;
   }
   .team-list__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
     min-width: 354px;
   }
-  .team-list__item:nth-child(even) {
-    margin-left: 30px;
+  .team-list__item:nth-child(2n) {
+    margin-right: 0;
   }
   .team-list__item:nth-last-child(-n+2) {
-    margin-bottom: -30px;
+    margin-bottom: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team-list {
     display: flex;
-  }
-  .team-list__item {
-    margin-bottom: 0px;
   }
   .team-list__item:not(:last-child) {
     margin-right: 30px;
@@ -692,17 +683,26 @@ body {
   margin-bottom: 16px;
 }
 
-.clients {
-  display: flex;
-}
-
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .clients {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .clients__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .clients__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
 }
 
 .clients__link {
   display: flex;
-  padding: 16px 32px 16px 32px;
+  padding: 16px 51px 16px 51px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
@@ -714,6 +714,38 @@ body {
 .clients__link:hover, .clients__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .clients {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .clients__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .clients__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+  .clients__link {
+    padding: 16px 59px 16px 59px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    display: flex;
+  }
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .clients__link {
+    padding: 16px 31px 16px 31px;
+  }
 }
 
 .clients__icon {
