--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -3,11 +3,6 @@
     background-color: #F5F4FA;
 }
 
-/*.team-list {
-    display: flex;
-    margin-left: -30px;
-}*/
-
 .team-list__item {
     font-weight: 500;
     font-size: 16px;
@@ -21,7 +16,7 @@
     border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
     .team-list__item:not(:last-child) {
         margin-bottom: 30px;
     }
@@ -31,17 +26,19 @@
     .team-list {
         display: flex;
         flex-wrap: wrap;
-    }     
+    }
 
     .team-list__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
         min-width: 354px;
 
-        &:nth-child(even) {
-            margin-left: 30px;
+        &:nth-child(2n) {
+            margin-right: 0;
         }
 
         &:nth-last-child(-n+2) {
-            margin-bottom: -30px;
+            margin-bottom: 0;
         }
     }
 }
@@ -49,14 +46,10 @@
 @media screen and (min-width: 1200px) {
     .team-list {
         display: flex;
-    }     
+    }
 
-    .team-list__item {
-        margin-bottom: 0px;
-
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
+    .team-list__item:not(:last-child) {
+        margin-right: 30px;
     }
 }
 
