--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,8 +2,8 @@
     color: #000000;
     font-family: Raleway;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+    font-size: 24px;
+    line-height: 1.17;
 }
 
 .logo__first-word {
@@ -12,4 +12,11 @@
 
 .logo__second-word {
     color: var(--secondary-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+    .logo {
+        font-size: 26px;
+        line-height: 1.2;
+    }
 }
