--- a/css/main.css
+++ b/css/main.css
@@ -225,8 +225,8 @@ body {
   color: #000000;
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.17;
 }
 
 .logo__first-word {
@@ -235,6 +235,13 @@ body {
 
 .logo__second-word {
   color: var(--secondary-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 
 .social-list {
@@ -765,15 +772,15 @@ body {
   background-color: var(--grey-bg-color);
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
+/*.footer-container {
+    display: flex;
+    align-items: baseline;
+}*/
 .footer-contacts {
-  margin-right: 70px;
+  margin-bottom: 60px;
 }
 
 .address {
@@ -815,25 +822,24 @@ body {
 }
 
 .footer-subscription {
-  margin-right: 93px;
+  margin-bottom: 60px;
 }
 
 .down {
   margin-bottom: 20px;
 }
 
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
+/*.form {
+    display: block;
+    justify-content: center;
+    align-items: center;
+}*/
 .form__email {
-  width: 358px;
+  width: 450px;
   height: 50px;
   padding-left: 16px;
   padding-right: 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
