--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -26,7 +26,6 @@
     &:not(:last-child) {
         margin-bottom: 9px;
     }
-    
 }
 
 .adress__link {
@@ -41,7 +40,6 @@
     &:hover {
         color: var(--accent-color);
     }
-        
 }
 
 .adress__contact-link {
@@ -56,7 +54,6 @@
     &:focus {
         color: var(--accent-color);
     }
-        
 }
  
 .footer-subscription {
@@ -94,9 +91,65 @@
         border-color: var(--accent-color);
         outline: none;
     }
-    
 }
 
 .form__button-text {
+    display: inline-block;
     margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+
+    .form {
+        display: block;
+        margin: auto;
+    }
+
+    .tablet {
+        display: flex;
+        align-items: baseline;
+        justify-content: center;
+    }
+
+    .footer-contacts {
+        margin-right: 165px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer {
+        text-align: start;
+    }
+    
+    .footer-container {
+    display: flex;
+    align-items: baseline;
+    }
+  
+    .tablet {
+        display: flex;
+        align-items: baseline;
+    }
+
+    .footer-contacts {
+        margin-right: 70px;
+        margin-bottom: 0;
+    }
+
+    .footer-subscription {
+        margin-right: 93px;
+        margin-bottom: 0;
+    }
+    
+    .form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+  
+    .form__email {
+        margin-bottom: 0;
+        margin-right: 12px;
+        width: 358px;
+    }
 }
