--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/container";
 
 // COMPONENTS
+@import "./components/mobile-menu";
 @import "./components/nav-menu";
 @import "./components/contact-menu";
 @import "./components/button";
