--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,105 @@ body {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    background-color: var(--secondary-text-color);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity, visibility;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-left: 40px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
+  }
+  .mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+    color: #188ce8;
+  }
+  .mobile-menu__nav {
+    margin-bottom: 302px;
+  }
+  .mobile-menu__nav-item {
+    font-weight: 500;
+    font-size: 40px;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__nav-item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__nav-link {
+    color: var(--title-text-color);
+  }
+  .mobile-menu__contacts {
+    margin-bottom: 64px;
+  }
+  .mobile-menu__contacts-phone {
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 34px;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__contacts-phone-link {
+    color: var(--accent-color);
+  }
+  .mobile-menu__contacts-email {
+    font-weight: 500;
+    font-size: 24px;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__contacts-email-link {
+    color: var(--primary-text-color);
+  }
+  .mobile-menu__network {
+    display: flex;
+  }
+  .mobile-menu__network-item {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
+  .mobile-menu__network-item:not(:last-child) {
+    margin-right: 20px;
+  }
+  .mobile-menu__network-link {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
 .nav-menu {
   display: flex;
   font-weight: 500;
@@ -127,8 +226,10 @@ body {
   letter-spacing: 0.02em;
 }
 
-.header__nav-menu {
-  margin-left: 93px;
+@media screen and (max-width: 767px) {
+  .nav-menu {
+    display: none;
+  }
 }
 
 .nav-menu__item:not(:last-child) {
@@ -136,7 +237,7 @@ body {
 }
 
 .nav-menu__link {
-  padding: 32px 0;
+  padding: 30px 0;
   color: var(--title-text-color);
 }
 
@@ -156,46 +257,78 @@ body {
   border-radius: 2px;
 }
 
-.contact-menu {
-  display: flex;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+@media screen and (max-width: 767px) {
+  .contact-menu {
+    display: none;
+  }
 }
 
-.contact-menu__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-menu__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .contact-menu__link {
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
+  .contact-menu__mail-icon {
+    width: 14px;
+    height: 10px;
+    margin-right: 8px;
+  }
+  .link:hover .contact-menu__mail-icon,
+  .link:focus .contact-menu__mail-icon {
+    fill: var(--accent-color);
+  }
+  .contact-menu__phone-icon {
+    width: 10px;
+    height: 14px;
+    margin-right: 8px;
+  }
+  .link:hover .contact-menu__phone-icon,
+  .link:focus .contact-menu__phone-icon {
+    fill: var(--accent-color);
+  }
 }
 
-.contact-menu__link {
-  color: var(--primary-text-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 32px 0;
-}
-
-.contact-menu__mail-icon {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-}
-
-.link:hover .contact-menu__mail-icon,
-.link:focus .contact-menu__mail-icon {
-  fill: var(--accent-color);
-}
-
-.contact-menu__phone-icon {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-}
-
-.link:hover .contact-menu__phone-icon,
-.link:focus .contact-menu__phone-icon {
-  fill: var(--accent-color);
+@media screen and (min-width: 1200px) {
+  .contact-menu {
+    display: flex;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+  .contact-menu__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-menu__link {
+    color: var(--primary-text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 32px 0;
+  }
+  .contact-menu__mail-icon {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+  }
+  .link:hover .contact-menu__mail-icon,
+  .link:focus .contact-menu__mail-icon {
+    fill: var(--accent-color);
+  }
+  .contact-menu__phone-icon {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+  }
+  .link:hover .contact-menu__phone-icon,
+  .link:focus .contact-menu__phone-icon {
+    fill: var(--accent-color);
+  }
 }
 
 .button {
@@ -484,37 +617,102 @@ body {
   align-self: center;
 }
 
-.header {
-  display: flex;
-  height: 80px;
-  background-color: var(--secondary-text-color);
-  border-bottom: 1px solid #ECECEC;
+/*.header {
+    display: flex;
+    height: 80px;
+    background-color: var(--secondary-text-color);
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header__nav {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
+}*/
+@media screen and (max-width: 767px) {
+  .header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .header__mobile-menu-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
+  }
+  .header__mobile-menu-btn:hover, .header__mobile-menu-btn:focus {
+    fill: #188ce8;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    height: 80px;
+    background-color: var(--secondary-text-color);
+    border-bottom: 1px solid #ECECEC;
+  }
+  .header__nav {
+    display: flex;
+    align-items: center;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    margin-right: 84px;
+  }
+  .header__nav-menu {
+    margin-left: 88px;
+  }
+  .header__mobile-menu-btn {
+    display: none;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    display: flex;
+    height: 80px;
+    background-color: var(--secondary-text-color);
+    border-bottom: 1px solid #ECECEC;
+  }
+  .header__nav {
+    display: flex;
+    align-items: center;
+  }
+  .header__nav-menu {
+    margin-left: 93px;
+  }
+  .header__mobile-menu-btn {
+    display: none;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .hero-section {
-  /*min-height: 600px;
-    max-width: 1600px;*/
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
-  /*background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-        ),
-        url(../images/bg-hero.jpg);*/
   background-size: cover;
   background-position: center;
   background-color: #2F303A;
@@ -848,7 +1046,7 @@ body {
 }
 
 .form__email {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   padding-right: 16px;
@@ -877,6 +1075,9 @@ body {
   .form {
     display: block;
     margin: auto;
+  }
+  .form__email {
+    width: 450px;
   }
   .tablet {
     display: flex;
