--- a/sass/components/_contact-menu.scss
+++ b/sass/components/_contact-menu.scss
@@ -1,42 +1,85 @@
-.contact-menu {
-    display: flex;
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+@media screen and (max-width: 767px) {
+    .contact-menu {
+        display: none;
+    }
 }
 
-.contact-menu__item:not(:last-child) {
-    margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .contact-menu__item:not(:last-child) {
+        margin-bottom: 10px;
+    }
+   
+    .contact-menu__link {
+        font-weight: 500;
+        font-size: 12px;
+        letter-spacing: 0.02em;
+        color: var(--primary-text-color);
+    }
+
+    .contact-menu__mail-icon {
+        width: 14px;
+        height: 10px;
+        margin-right: 8px;
+    
+        .link:hover &,
+        .link:focus & {
+            fill: var(--accent-color);
+        }
+    }
+    
+    .contact-menu__phone-icon {
+        width: 10px;
+        height: 14px;
+        margin-right: 8px;   
+    
+        .link:hover &,
+        .link:focus & {
+            fill: var(--accent-color);
+        }
+    }    
 }
 
-.contact-menu__link {
-    color: var(--primary-text-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 32px 0;
-}
+@media screen and (min-width: 1200px) {
+    .contact-menu {
+        display: flex;
+    
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+    }
+    
+    .contact-menu__item:not(:last-child) {
+        margin-right: 50px;
+    }
+    
+    .contact-menu__link {
+        color: var(--primary-text-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 32px 0;
+    }    
 
-.contact-menu__mail-icon {
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
-
-    .link:hover &,
-    .link:focus & {
-        fill: var(--accent-color);
-}
-}
-
-.contact-menu__phone-icon {
-    width: 10px;
-    height: 16px;
-    margin-right: 10px;   
-
-    .link:hover &,
-    .link:focus & {
-        fill: var(--accent-color);
-}
+    .contact-menu__mail-icon {
+        width: 16px;
+        height: 12px;
+        margin-right: 10px;
+    
+        .link:hover &,
+        .link:focus & {
+            fill: var(--accent-color);
+        }
+    }
+    
+    .contact-menu__phone-icon {
+        width: 10px;
+        height: 16px;
+        margin-right: 10px;   
+    
+        .link:hover &,
+        .link:focus & {
+            fill: var(--accent-color);
+        }
+    }    
 }
