--- a/sass/components/_nav-menu.scss
+++ b/sass/components/_nav-menu.scss
@@ -7,8 +7,10 @@
     letter-spacing: 0.02em;
 }
 
-.header__nav-menu {
-    margin-left: 93px;
+@media screen and (max-width: 767px) {
+    .nav-menu {
+        display: none;
+    }
 }
 
 .nav-menu__item:not(:last-child) {
@@ -16,7 +18,7 @@
 }
 
 .nav-menu__link {
-    padding: 32px 0;
+    padding: 30px 0;
     color: var(--title-text-color);
 }
 
