--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -62,7 +62,7 @@
 }
 
 .form__email {
-    width: 450px;
+    width: 100%;
     height: 50px;
     padding-left: 16px;
     padding-right: 16px;
@@ -93,6 +93,10 @@
     .form {
         display: block;
         margin: auto;
+    }
+
+    .form__email {
+        width: 450px;
     }
 
     .tablet {
