--- a/sass/layout/_portfolio-card-set.scss
+++ b/sass/layout/_portfolio-card-set.scss
@@ -1,20 +1,5 @@
-.card-set {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.card-set__item {
-    margin-right: 30px;
+.card-set__item:not(:last-child) {
     margin-bottom: 30px;
-
-    &:nth-child(3n+3){
-        margin-right: 0;
-    }
-    
-    &:nth-child(n+7){
-        margin-bottom: 0;
-    }
-    
 }
 
 .card-set__link {
@@ -86,4 +71,44 @@
     font-size: 16px;
     line-height: 1.88;
     margin-top: 4px;
+}
+
+@media screen and (min-width: 768px) {
+    .card-set {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+    .card-set__item:nth-child(2n) {
+        margin-left: 30px;
+    }
+
+    .card-set__content--down {
+        padding-bottom: 41px;
+    }
+
+    .card-set__desc--wrap {
+        width: 304px;
+    }
+}
+
+@media screen and (min-width: 1200px) {    
+    .card-set__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
+    
+        &:nth-child(3n+3){
+            margin-right: 0;
+        }
+        
+        &:nth-child(n+7){
+            margin-bottom: 0;
+        }
+
+        &:nth-child(2n){
+            margin-left: 0;
+        }
+    }   
 }
