--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,6 +3,14 @@
     padding-bottom: 118px;
     margin-left: auto;
     margin-right: auto;
+
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+        ),
+        url(/images/picture_mob/header-mob.jpg);
+
     background-size: cover;  
     background-position: center;  
     background-color: #2F303A;
@@ -26,6 +34,41 @@
     text-transform: uppercase;
 }
 
+@media (min-device-pixel-ratio: 2) and (max-width: 767px),
+       (min-resolution: 192dpi) and (max-width: 767px),
+       (min-resolution: 2dppx) and (max-width: 767px) {
+           .hero-section {
+               background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+                ),
+                url(/images/picture_mob/header-mob@2x.jpg);
+           }
+        }
+
+@media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+        ),
+        url(/images/picture_tab/header_tab.jpg);
+}
+
+@media (min-device-pixel-ratio: 2) and (max-width: 1199px),
+       (min-resolution: 192dpi) and (max-width: 1199px),
+       (min-resolution: 2dppx) and (max-width: 1199px) {
+           .hero-section {
+               background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+                ),
+                url(/images/picture_tab/header_tab@2x.jpg);
+           }
+        }
+
 @media screen and (min-width: 1200px) {
     .hero-section {
         padding-top: 200px;
@@ -38,7 +81,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
         ),
-        url(../images/bg-hero.jpg);
+        url(images/picture_desc/header_desc.jpg);
     }
 
     .hero-section__title {
@@ -47,3 +90,16 @@
         max-width: 696px;
     }
 }
+
+@media (min-device-pixel-ratio: 2) and (min-width: 1200px),
+       (min-resolution: 192dpi) and (min-width: 1200px),
+       (min-resolution: 2dppx) and (min-width: 1200px) {
+           .hero-section {
+               background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+                ),
+                url(/images/picture_desc/header_desc@2x.jpg);
+           }
+        }
