--- a/css/main.css
+++ b/css/main.css
@@ -511,12 +511,6 @@ body {
   margin-bottom: 12px;
 }
 
-@media screen and (min-width: 1200px) {
-  .data-form__text {
-    line-height: 1.15;
-  }
-}
-
 .data-form__label {
   margin-bottom: 10px;
   font-size: 12px;
@@ -562,6 +556,7 @@ body {
 
 .data-form__textarea {
   margin-bottom: 20px;
+  font-size: 12px;
 }
 
 .data-form__comment {
@@ -599,13 +594,21 @@ body {
 }
 
 .data-form__policy-text {
-  margin-top: 10px;
   padding-left: 36px;
   font-size: 12px;
   line-height: 1.17;
 }
 
+@media screen and (max-width: 1199px) {
+  .data-form__policy-text {
+    padding-left: 16px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
+  .data-form__text {
+    line-height: 1.15;
+  }
   .data-form__policy-text {
     font-size: 14px;
     line-height: 1.71;
@@ -769,7 +772,7 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/picture_tab/header_tab.jpg);
+  background-image: linear-gradient to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4), url(/images/picture_tab/header_tab.jpg);
 }
 
 @media (min-device-pixel-ratio: 2) and (max-width: 1199px), (min-resolution: 192dpi) and (max-width: 1199px), (min-resolution: 2dppx) and (max-width: 1199px) {
