--- a/sass/components/_data-form.scss
+++ b/sass/components/_data-form.scss
@@ -12,12 +12,6 @@
     margin-bottom: 12px;
 }
 
-@media screen and (min-width: 1200px) {
-    .data-form__text {
-        line-height: 1.15;
-    }
-}
-
 .data-form__label {
     margin-bottom: 10px;
     font-size: 12px;
@@ -65,6 +59,7 @@
 
 .data-form__textarea {
     margin-bottom: 20px;
+    font-size: 12px;
 }
 
 .data-form__comment {
@@ -103,15 +98,23 @@
 }
 
 .data-form__policy-text {
-    
-    margin-top: 10px;
     padding-left: 36px;
 
     font-size: 12px;
     line-height: 1.17;
 }
 
+@media screen and (max-width: 1199px) {
+    .data-form__policy-text {
+        padding-left: 16px;
+    }
+}
+
 @media screen and (min-width: 1200px) {
+    .data-form__text {
+        line-height: 1.15;
+    }
+
     .data-form__policy-text {
         font-size: 14px;
         line-height: 1.71;
