--- a/css/main.css
+++ b/css/main.css
@@ -772,7 +772,9 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  background-image: linear-gradient to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4), url(/images/picture_tab/header_tab.jpg);
+  .hero-section {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/picture_tab/header_tab.jpg);
+  }
 }
 
 @media (min-device-pixel-ratio: 2) and (max-width: 1199px), (min-resolution: 192dpi) and (max-width: 1199px), (min-resolution: 2dppx) and (max-width: 1199px) {
