--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -48,12 +48,14 @@
         }
 
 @media screen and (min-width: 768px) {
-    background-image: linear-gradient (
+    .hero-section {
+        background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
         ),
         url(/images/picture_tab/header_tab.jpg);
+    }
 }
 
 @media (min-device-pixel-ratio: 2) and (max-width: 1199px),
