добавила оверфлоу на бєкдроп

--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,7 @@ body {
   transition: opacity, visibility;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--animation-timing-function);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
