--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,3 +1,37 @@
+.clients__link {
+    display: flex;
+    justify-content: center;
+    /*padding: 16px 51px 16px 51px;*/
+    
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    color: #afb1b8;
+
+    transition-property: color, border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
+
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color);
+      color: var(--accent-color);
+    }
+}
+
+.clients__icon {
+    width: 106px;
+    height: 60px;
+
+    transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
+
+    .clients__link:hover &,
+    .clients__link:focus & {
+        color: var(--accent-color);
+    }
+}
+
 @media screen and (max-width: 767px) {
     .clients {
         display: flex;
@@ -18,23 +52,16 @@
     }
 }
 
-.clients__link {
-    display: flex;
-    padding: 16px 51px 16px 51px;
-    
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    color: #afb1b8;
-
-    transition-property: color, border-color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--animation-timing-function);
-
-    &:hover,
-    &:focus {
-      border-color: var(--accent-color);
-      color: var(--accent-color);
+@media screen and (max-width: 479px) {
+    .clients__item {
+        width: calc((100% - 30px) / 2);
     }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+    .clients__link {
+        padding: 16px 51px 16px 51px;
+    }    
 }
 
 @media screen and (min-width: 767px) and (max-width: 1199px) {
@@ -76,16 +103,3 @@
 
 }
 
-.clients__icon {
-    width: 106px;
-    height: 60px;
-
-    transition-property: color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--animation-timing-function);
-
-    .clients__link:hover &,
-    .clients__link:focus & {
-        color: var(--accent-color);
-    }
-}
